Utworzono za pomocą Colab

--- a/250-data-science-bootcamp-w-jezyku-python/091_100_exercises.ipynb
+++ b/250-data-science-bootcamp-w-jezyku-python/091_100_exercises.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "83cda58f-a2a2-434f-f68a-789851e42bc4"
+        "outputId": "fc42e92d-cd55-4afd-d390-df9e4b0ac091"
       },
       "source": [
         "import numpy as np\n",
@@ -69,7 +69,7 @@
         "np.set_printoptions(linewidth=160, suppress=True)\n",
         "np.__version__"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +130,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "66275da0-7002-4a57-c826-58c11113af67"
+        "outputId": "3143acaf-089b-4b92-800f-476567903ae3"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -145,10 +145,10 @@
         "lines = wig_games_raw.strip().splitlines()\n",
         "data = [line.split('\\t') for line in lines]\n",
         "wig_games_arr = np.array(data)\n",
-        "wig_games_arr = np.char.replace(wig_games, ' ', '')\n",
+        "wig_games_arr = np.char.replace(wig_games_arr, ' ', '')\n",
         "wig_games_arr\n"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -163,7 +163,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 17
         }
       ]
     },
@@ -201,7 +201,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "de4d8413-c746-471c-ea5e-0f8030c02d0e"
+        "outputId": "c7658e6d-231b-48e7-ead2-74bb8165a331"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -210,7 +210,7 @@
         "#wig_games1 = np.delete(wig_games, [3, 4, 5], axis = 0)\n",
         "wig_games1"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,7 +225,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 18
         }
       ]
     },
@@ -249,7 +249,7 @@
         "\n",
         "np.savetxt('wig_games.csv', wig_games1, fmt='%s', delimiter=',')"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -268,12 +268,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12b1f68d-fd3a-46d4-b89f-760b00c3cd7c"
+        "outputId": "06832e8d-bbf9-48ce-d068-e6c123914e43"
       },
       "source": [
         "!head wig_games.csv"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,14 +306,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c054c8f-5e15-4283-98f1-aa7266bb5b29"
+        "outputId": "807c7f27-2430-44a4-bea4-cef15c114b27"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "wig_games_new = np.loadtxt('wig_games.csv', delimiter=',', dtype=np.str_)\n",
         "wig_games_new"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +328,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 21
         }
       ]
     },
@@ -379,7 +379,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5996c391-bc18-4d15-d097-09f27df56e5e"
+        "outputId": "ac4ed607-1d9b-4d74-8e35-19f6c7033c86"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -409,7 +409,7 @@
         "playway = np.array([line.split(',') for line in playway_raw.strip().splitlines()])\n",
         "playway"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 22
         }
       ]
     },
@@ -491,14 +491,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6ee65f36-09c4-4e4d-967b-8d6a59d5d6cf"
+        "outputId": "5f1be2fc-3cbb-414b-c95e-369be6554878"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "playway_values = playway[1: ,:][:, 1:].astype(float)\n",
         "playway_values"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -529,7 +529,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 23
         }
       ]
     },
@@ -550,14 +550,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0897e1ed-aa57-4d06-d4f6-f1b9384b60af"
+        "outputId": "0fc52c43-27cf-4882-e260-caaf54d94450"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
-        "playway_values_mean = np.round(np.mean(playway_values, axis=0), 2)\n",
+        "playway_values_mean = np.round(np.mean(playway_values, axis = 0), 2)\n",
         "playway_values_mean"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -567,7 +567,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 24
         }
       ]
     },
@@ -583,13 +583,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6tXybjFPoYuH"
+        "id": "6tXybjFPoYuH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d75815cf-c670-4f96-827a-8af831899869"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "playway_values_min = np.round(np.min(playway_values, axis = 0), 2)\n",
+        "playway_values_min"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  205.,   228.,   196.,   197., 10316.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -603,13 +620,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fSPfLYUpoi-9"
+        "id": "fSPfLYUpoi-9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b78f2678-3450-4ce8-86c6-1c4dc27ef39c"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "playway_values_max = np.round(np.max(playway_values, axis = 0), 2)\n",
+        "playway_values_max"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([   344. ,    344. ,    320. ,    340.5, 100412. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -623,13 +657,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gk6HsA-rotzG"
+        "id": "Gk6HsA-rotzG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5be1037a-3f51-423d-bbc1-b59963482719"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "playway_values_diff = playway_values_max - playway_values_min\n",
+        "playway_values_diff"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  139. ,   116. ,   124. ,   143.5, 90096. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -677,13 +728,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uo-LawS_pbEx"
+        "id": "Uo-LawS_pbEx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7b50e05-c686-4d0f-efde-94581b8b6c7f"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "max_min_diff = playway_values[:, 1] - playway_values[:, 2]\n",
+        "playway_values_max_min = playway_values.copy()\n",
+        "playway_values_max_min = np.column_stack((playway_values_max_min, max_min_diff))\n",
+        "playway_values_max_min"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[   305. ,    324.5,    283.5,    310. ,  64081. ,     41. ],\n",
+              "       [   325.5,    340.5,    320. ,    340.5,  55496. ,     20.5],\n",
+              "       [   324. ,    340.5,    315. ,    330. ,  36152. ,     25.5],\n",
+              "       [   344. ,    344. ,    310. ,    315. ,  35992. ,     34. ],\n",
+              "       [   306.5,    307. ,    291. ,    305. ,  32539. ,     16. ],\n",
+              "       [   274. ,    291. ,    250. ,    258. ,  79402. ,     41. ],\n",
+              "       [   278. ,    284.5,    256. ,    264. ,  35700. ,     28.5],\n",
+              "       [   270. ,    270. ,    238.5,    245. ,  60445. ,     31.5],\n",
+              "       [   218. ,    228. ,    196. ,    197. ,  94031. ,     32. ],\n",
+              "       [   210. ,    229. ,    198.8,    211. , 100412. ,     30.2],\n",
+              "       [   205. ,    248. ,    197.8,    240.5,  50659. ,     50.2],\n",
+              "       [   245. ,    269. ,    232.5,    264. ,  99480. ,     36.5],\n",
+              "       [   264. ,    280. ,    251. ,    270. ,  70136. ,     29. ],\n",
+              "       [   267. ,    280. ,    267. ,    279.5,  30732. ,     13. ],\n",
+              "       [   297.5,    307. ,    280. ,    280.5,  43426. ,     27. ],\n",
+              "       [   274. ,    289. ,    258. ,    285. ,  37098. ,     31. ],\n",
+              "       [   305. ,    309. ,    296.5,    309. ,  31939. ,     12.5],\n",
+              "       [   313. ,    330. ,    295. ,    304. ,  46724. ,     35. ],\n",
+              "       [   300. ,    309. ,    295.5,    300. ,  27213. ,     13.5],\n",
+              "       [   302. ,    306.5,    290. ,    296. ,  13466. ,     16.5],\n",
+              "       [   299. ,    300. ,    287. ,    300. ,  10316. ,     13. ],\n",
+              "       [   302.5,    309. ,    302. ,    306.5,  15698. ,      7. ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -698,13 +789,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rwuMJLk1rS01"
+        "id": "rwuMJLk1rS01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc57fc7f-3f80-4ae8-806d-c0db312d2651"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "playway_values_max_min_300 = playway_values_max_min[playway_values_max_min[:, 3] > 300 ]\n",
+        "playway_values_max_min_300"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  305. ,   324.5,   283.5,   310. , 64081. ,    41. ],\n",
+              "       [  325.5,   340.5,   320. ,   340.5, 55496. ,    20.5],\n",
+              "       [  324. ,   340.5,   315. ,   330. , 36152. ,    25.5],\n",
+              "       [  344. ,   344. ,   310. ,   315. , 35992. ,    34. ],\n",
+              "       [  306.5,   307. ,   291. ,   305. , 32539. ,    16. ],\n",
+              "       [  305. ,   309. ,   296.5,   309. , 31939. ,    12.5],\n",
+              "       [  313. ,   330. ,   295. ,   304. , 46724. ,    35. ],\n",
+              "       [  302.5,   309. ,   302. ,   306.5, 15698. ,     7. ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -719,13 +834,55 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BNaPPvhssbmW"
+        "id": "BNaPPvhssbmW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5ba45a0-7080-458e-dcee-1346803dd9c3"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "top_10_rows_sort_idx = np.argsort(playway_values[:, 4])[::-1]\n",
+        "top_10_rows = playway_values[top_10_rows_sort_idx[: 10]]\n",
+        "top_10_rows"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[   210. ,    229. ,    198.8,    211. , 100412. ],\n",
+              "       [   245. ,    269. ,    232.5,    264. ,  99480. ],\n",
+              "       [   218. ,    228. ,    196. ,    197. ,  94031. ],\n",
+              "       [   274. ,    291. ,    250. ,    258. ,  79402. ],\n",
+              "       [   264. ,    280. ,    251. ,    270. ,  70136. ],\n",
+              "       [   305. ,    324.5,    283.5,    310. ,  64081. ],\n",
+              "       [   270. ,    270. ,    238.5,    245. ,  60445. ],\n",
+              "       [   325.5,    340.5,    320. ,    340.5,  55496. ],\n",
+              "       [   205. ,    248. ,    197.8,    240.5,  50659. ],\n",
+              "       [   313. ,    330. ,    295. ,    304. ,  46724. ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Wyjaśnienie:\n",
+        "\n",
+        "* playway_values[:, 4] – wybiera wszystkie wiersze z piątej kolumny (indeks 4).\n",
+        "* np.argsort(playway_values[:, 4]) – zwraca indeksy, które posortują tę kolumnę w kolejności rosnącej.\n",
+        "* [::-1] – odwraca kolejność, czyli uzyskujemy sortowanie malejące.\n",
+        "* sorted_idx[:10] – wybiera pierwsze 10 indeksów z posortowanego (malejąco) ciągu.\n",
+        "* playway_values[sorted_idx[:10]] – wybiera wiersze odpowiadające tym indeksom."
+      ],
+      "metadata": {
+        "id": "7z7SvSjxIgB9"
+      }
     },
     {
       "cell_type": "markdown",
@@ -769,13 +926,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bg9OBn0Lt6Mu"
+        "id": "Bg9OBn0Lt6Mu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "37e4f700-02de-46f8-ba1b-ecf81fa85185"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "\n",
+        "playway_values_max_min_prices_val = np.where(playway_values_max_min[:, 3] > playway_values_max_min[:, 0], 1, 0)\n",
+        "playway_values_max_min_prices = np.column_stack((playway_values_max_min, playway_values_max_min_prices_val))\n",
+        "playway_values_max_min_prices"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[   305. ,    324.5,    283.5,    310. ,  64081. ,     41. ,      1. ],\n",
+              "       [   325.5,    340.5,    320. ,    340.5,  55496. ,     20.5,      1. ],\n",
+              "       [   324. ,    340.5,    315. ,    330. ,  36152. ,     25.5,      1. ],\n",
+              "       [   344. ,    344. ,    310. ,    315. ,  35992. ,     34. ,      0. ],\n",
+              "       [   306.5,    307. ,    291. ,    305. ,  32539. ,     16. ,      0. ],\n",
+              "       [   274. ,    291. ,    250. ,    258. ,  79402. ,     41. ,      0. ],\n",
+              "       [   278. ,    284.5,    256. ,    264. ,  35700. ,     28.5,      0. ],\n",
+              "       [   270. ,    270. ,    238.5,    245. ,  60445. ,     31.5,      0. ],\n",
+              "       [   218. ,    228. ,    196. ,    197. ,  94031. ,     32. ,      0. ],\n",
+              "       [   210. ,    229. ,    198.8,    211. , 100412. ,     30.2,      1. ],\n",
+              "       [   205. ,    248. ,    197.8,    240.5,  50659. ,     50.2,      1. ],\n",
+              "       [   245. ,    269. ,    232.5,    264. ,  99480. ,     36.5,      1. ],\n",
+              "       [   264. ,    280. ,    251. ,    270. ,  70136. ,     29. ,      1. ],\n",
+              "       [   267. ,    280. ,    267. ,    279.5,  30732. ,     13. ,      1. ],\n",
+              "       [   297.5,    307. ,    280. ,    280.5,  43426. ,     27. ,      0. ],\n",
+              "       [   274. ,    289. ,    258. ,    285. ,  37098. ,     31. ,      1. ],\n",
+              "       [   305. ,    309. ,    296.5,    309. ,  31939. ,     12.5,      1. ],\n",
+              "       [   313. ,    330. ,    295. ,    304. ,  46724. ,     35. ,      0. ],\n",
+              "       [   300. ,    309. ,    295.5,    300. ,  27213. ,     13.5,      0. ],\n",
+              "       [   302. ,    306.5,    290. ,    296. ,  13466. ,     16.5,      0. ],\n",
+              "       [   299. ,    300. ,    287. ,    300. ,  10316. ,     13. ,      1. ],\n",
+              "       [   302.5,    309. ,    302. ,    306.5,  15698. ,      7. ,      1. ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     }
   ]
 }
